--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -4,7 +4,7 @@ a,a:visited{text-decoration:none}
 a{-webkit-tap-highlight-color:rgba(255,0,0,0)}
 body{margin:0;padding:0}
 body,input,textarea{font:12px STHeiti,"Microsoft YaHei",SimSun,STSong,"\5b8b\4f53",Arial,Helvetica,sans-serif;font:.3rem STHeiti,"Microsoft YaHei",SimSun,STSong,"\5b8b\4f53",Arial,Helvetica,sans-serif}
-body,html{width:100%;min-height:100%;overflow-y:auto;overflow-x:hidden;background-color:#ebf0f1}
+body,html{width:100%;min-height:100%;overflow-y:auto;overflow-x:hidden;background-color:#ebf0f1;font-size: 30px;}
 body{background:#ecf0f1}
 *{box-sizing:border-box;margin:0;padding:0;font-weight:normal}
 ul{list-style:none}
